examples/test/testpolicy11029.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11029
  namespace: namespace419
spec:
  podSelector:
    matchLabels:
      key20: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value35
          key44: value15
      podSelector:
        matchLabels:
          key42: value1
          key23: value45
          key21: value16
